samples/_failures_safe/1761165315_89b6f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58dfe7b8.c: In function ‘main’:
./samples/SAFE/__tmp_58dfe7b8.c:165:32: error: ‘token_type_to’ undeclared (first use in this function); did you mean ‘TokenType’?
  165 |         printf("  %s: '%s'\n", token_type_to
      |                                ^~~~~~~~~~~~~
      |                                TokenType
./samples/SAFE/__tmp_58dfe7b8.c:165:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_58dfe7b8.c:165:45: error: expected ‘)’ at end of input
  165 |         printf("  %s: '%s'\n", token_type_to
      |               ~                             ^
      |                                             )
./samples/SAFE/__tmp_58dfe7b8.c:165:9: error: expected declaration or statement at end of input
  165 |         printf("  %s: '%s'\n", token_type_to
      |         ^~~~~~
./samples/SAFE/__tmp_58dfe7b8.c:165:9: error: expected declaration or statement at end of input
